Fix to SCSS for .twitter-timeline (home page) on small screens
Code from https://stackoverflow.com/questions/53033441/embedded-twitter-timeline-overflow-issue-in-browser-on-iphone

--- a/assets/scss/ofotigrid/_layout.scss
+++ b/assets/scss/ofotigrid/_layout.scss
@@ -78,6 +78,10 @@ h3.twitter-border {
   }
 }
 
+.twitter-timeline {
+	width: 100vw !important;
+}
+
 img.featured-image {
   display: block;
   width: 90%;
